# lib/api-spec/openapi.yaml
@@ -150,9 +150,11 @@ components:
         latitude:
           type: number
           format: float
+          nullable: true
         longitude:
           type: number
           format: float
+          nullable: true
         notes:
           type: string
           nullable: true
@@ -162,8 +164,6 @@ components:
       required:
         - id
         - university
-        - latitude
-        - longitude
         - createdAt
 
     CreateSightingBody:
@@ -174,16 +174,16 @@ components:
         latitude:
           type: number
           format: float
+          nullable: true
         longitude:
           type: number
           format: float
+          nullable: true
         notes:
           type: string
           nullable: true
       required:
         - university
-        - latitude
-        - longitude
 
     UniversityStat:
       type: object
